@@ -1,9 +1,12 @@
 package com.nhl.link.rest.it.fixture.pojo.model;
 
+import com.nhl.link.rest.annotation.LrAttribute;
+
 public class P1 {
 
 	private String name;
 
+	@LrAttribute
 	public String getName() {
 		return name;
 	}
