@@ -1,10 +1,14 @@
 package com.nhl.link.rest.it.fixture.pojo.model;
 
+import com.nhl.link.rest.annotation.LrAttribute;
+import com.nhl.link.rest.annotation.LrRelationship;
+
 public class P2 {
 
 	private String name;
 	private P1 p1;
 
+	@LrAttribute
 	public String getName() {
 		return name;
 	}
@@ -13,6 +17,7 @@ public class P2 {
 		this.name = name;
 	}
 
+	@LrRelationship
 	public P1 getP1() {
 		return p1;
 	}
