@@ -1,10 +1,14 @@
 package com.nhl.link.rest.it.fixture.pojo.model;
 
+import com.nhl.link.rest.annotation.LrAttribute;
+import com.nhl.link.rest.annotation.LrId;
+
 public class P6 {
 
 	private String stringId;
 	private int intProp;
 
+	@LrId
 	public String getStringId() {
 		return stringId;
 	}
@@ -13,6 +17,7 @@ public class P6 {
 		this.stringId = stringId;
 	}
 
+	@LrAttribute
 	public int getIntProp() {
 		return intProp;
 	}
